# cockroach_deploy

./: Cargo.toml  README.md  cockroach_config.toml  default_config.toml  stateful_set.yaml  stateful_set_v2.yaml  temp_config.toml
src/: cli.rs  cockroach.rs  cockroach_yaml.rs  config.rs  lib.rs  utils.rs
src/cli/: cli.rs
