[package]
name = "cockroach_deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
toml_config_derive = "0.1.4"
#serde = { version = "1.0.218", features = ["derive"] }

[features]
cli = ["clap/derive", "tokio/rt-multi-thread", "tokio/macros"]

#[lib]
#name = "cockroach_deploy"
#path = "src/lib.rs"

[[bin]]
name = "cockroach_deploy_cli"
path = "src/cli/cli.rs"
required-features = ["cli"]

[dependencies.anyhow]
version = "1.0.96"

[dependencies.tokio]
version = "1.43.0"
optional = true

[dependencies.clap]
version = "4.5.31"
optional = true

[dependencies.k8s-openapi]
version = "0.24.0"
features = ["v1_32"]


[dependencies.kube]
version = "0.98"
features = ["runtime"]
