[package]
name = "cockroach_deploy"
version = "0.1.0"
edition = "2024"
description = "Rust lib for a basic local cockroachdb deployment with optional CLI"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cockroach_deploy"
repository = "https://github.com/simp4t7/cockroach_deploy"
readme = "README.md"

[dependencies]

[dependencies.scopeguard]
version = "1.2.0"
optional = true

[dependencies.sqlx]
version = "0.8.3"
features = ["postgres"]

[dependencies.log]
version = "0.4.26"
optional = false

[dependencies.simple_logger]
version = "5.0.0"
optional = true

[features]
cli = ["clap/derive", "tokio/rt-multi-thread", "tokio/macros", "dep:simple_logger", "tokio/sync", "dep:scopeguard"]

#[lib]
#name = "cockroach_deploy"
#path = "src/lib.rs"

[[bin]]
name = "cockroach_deploy_cli"
path = "src/cli/cli.rs"
required-features = ["cli"]

[dependencies.toml_config_trait]
version = "0.1.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.anyhow]
version = "1.0.96"

[dependencies.tokio]
version = "1.43.0"
optional = true

[dependencies.clap]
version = "4.5.31"
optional = true

[dependencies.k8s-openapi]
version = "0.24.0"
features = ["v1_32"]


[dependencies.kube]
version = "0.98"
features = ["runtime"]
