[package]
name = "cockroach_deploy"
version = "0.1.1"
edition = "2024"
description = "Rust lib for a basic local cockroachdb deployment with optional CLI"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cockroach_deploy"
repository = "https://github.com/simp4t7/cockroach_deploy"
readme = "README.md"


[dependencies]
scopeguard = "1.2.0"
log = "0.4.26"
simple_logger = "5.0.0"
toml_config_trait = "0.1.5"
anyhow = "1.0.96"

[dependencies.sqlx]
version = "0.8.3"
features = ["postgres"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.43.0"
features = ["rt-multi-thread", "macros", "sync"]

[dependencies.clap]
version = "4.5.31"
features = ["derive"]

[dependencies.k8s-openapi]
version = "0.24.0"
features = ["v1_32"]


[dependencies.kube]
version = "0.98.0"
features = ["runtime"]

[[bin]]
name = "cockroach_deploy_cli"
path = "src/cli.rs"

[lib]
name = "cockroach_deploy"
path = "src/lib.rs"
